Updated Theme Management

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <input type="checkbox" id="dark-mode-toggle" class="toggle-checkbox">
     <input type="checkbox" id="sidebar-toggle" class="sidebar-toggle-checkbox">
 
+    <!-- Mobile Sidebar Overlay -->
+    <div class="sidebar-overlay"></div>
+
     <!-- Floating Social Media Icons -->
     <div class="floating-social">
         <a href="https://instagram.com" target="_blank" class="tooltip-left" data-tip="Instagram"
@@ -102,7 +105,7 @@
             <!-- About Section -->
             <section id="about" class="page-section">
                 <div class="about-wrapper">
-                    <h2 class="section-title">About Me </h2>
+                    <h2 class="section-title">About Me 🧑‍💻</h2>
                     <div class="about-content">
                         <div class="about-image">
                             <img src="./assets/avatar-home.png" alt="About Me" loading="lazy">
@@ -131,7 +134,7 @@
             <!-- Projects Section -->
             <section id="projects" class="page-section">
                 <div class="projects-wrapper">
-                    <h2 class="section-title">My Projects </h2>
+                    <h2 class="section-title">My Projects 🚀</h2>
                     <div class="projects-grid">
 
                         <!-- Project 1: E-Commerce Platform -->
