updated navigation links for projetcs

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <input type="checkbox" id="dark-mode-toggle" class="toggle-checkbox">
     <input type="checkbox" id="sidebar-toggle" class="sidebar-toggle-checkbox">
 
+    <!-- Mobile Overlay -->
+    <label for="sidebar-toggle" class="mobile-overlay"></label>
+
     <!-- Floating Social Media Icons -->
     <div class="floating-social">
-        <a href="https://instagram.com" target="_blank" class="tooltip-left" data-tip="Instagram"
+        <a href="https://www.instagram.com/juss.erty" target="_blank" class="tooltip-left" data-tip="Instagram"
             aria-label="Instagram">
             <i class="fab fa-instagram"></i>
         </a>
@@ -27,7 +30,8 @@
             <i class="fab fa-telegram"></i>
         </a>
 
-        <a href="https://www.linkedin.com/in/apandey9046" target="_blank" class="tooltip-left" data-tip="LinkedIn" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/apandey9046" target="_blank" class="tooltip-left" data-tip="LinkedIn"
+            aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://github.com/arpitpandey06" target="_blank" class="tooltip-left" data-tip="GitHub"
@@ -133,46 +137,45 @@
                     <h2 class="section-title">My Projects </h2>
                     <div class="projects-grid">
 
-                        <!-- Project 1: E-Commerce Platform -->
+                        <!-- Project 1: Foodie Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://via.placeholder.com/300x200/4A90E2/FFFFFF?text=E-Commerce+App"
-                                    alt="E-Commerce Platform" loading="lazy">
+                                <img src=""
+                                    alt="Foodie_website" loading="lazy">
                             </div>
                             <div class="project-info">
-                                <h3>Expense And Income Manager</h3>
-                                <p>A Simple Expense Maanger WebApp To Make Day To Day Expense Recording Easy.</p>
+                                <h3>Foodie Food Delivery Website</h3>
+                                <p>A Food Ordering Website Along With Add To Cart And Mobile Responsive Like Features</p>
                                 <div class="project-tech">
                                     <span>HTML</span>
                                     <span>CSS</span>
                                     <span>JavaScript</span>
                                 </div>
                                 <div class="project-links">
-                                    <a href="https://arpitpandey21.github.io/Expense_Income_Manager/"
+                                    <a href="https://arpitpandey06.github.io/Foodie--Foood_Delivery_Website/"
                                         class="btn-secondary">View Demo</a>
-                                    <a href="#" class="btn-primary">Source Code</a>
+                                    <a href="https://github.com/arpitpandey06" class="btn-primary">Source Code</a>
                                 </div>
                             </div>
                         </div>
                         <!-- Project 2: Task Manager -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://via.placeholder.com/300x200/50E3C2/FFFFFF?text=Task+Manager"
-                                    alt="Task Manager" loading="lazy">
+                                <img src="#"
+                                    alt="Posrtfolio_2" loading="lazy">
                             </div>
                             <div class="project-info">
-                                <h3>Task Manager</h3>
-                                <p>Simple App For Adding ANd MAnageing Day To Day Task In A Attaractive Way So That
-                                    Users Dont Get Bored</p>
+                                <h3>Portfoilo Website 2</h3>
+                                <p>An Another Design For A New Portfolio Website Of Mine with Proper Responsiveness And New Looks</p>
                                 <div class="project-tech">
                                     <span>HTML</span>
                                     <span>CSS</span>
                                     <span>JavaScript</span>
                                 </div>
                                 <div class="project-links">
-                                    <a href="https://arpitpandey21.github.io/Task_manager/" class="btn-secondary">View
+                                    <a href="#" class="btn-secondary">View
                                         Demo</a>
-                                    <a href="#" class="btn-primary">Source Code</a>
+                                    <a href="https://github.com/arpitpandey06" class="btn-primary">Source Code</a>
                                 </div>
                             </div>
                         </div>
