--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <!-- Project 1: Foodie Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src=""
+                                <img src="/assets/image_2.png"
                                     alt="Foodie_website" loading="lazy">
                             </div>
                             <div class="project-info">
@@ -158,11 +158,11 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Project 2: Task Manager -->
+                        <!-- Project 2: Second Portfolio Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="#"
-                                    alt="Posrtfolio_2" loading="lazy">
+                                <img src="/assets/image.png"
+                                    alt="Portfolio_2" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Portfoilo Website 2</h3>
@@ -173,7 +173,7 @@
                                     <span>JavaScript</span>
                                 </div>
                                 <div class="project-links">
-                                    <a href="#" class="btn-secondary">View
+                                    <a href="https://arpitpandey06.github.io/Portfolio_website_02/" class="btn-secondary">View
                                         Demo</a>
                                     <a href="https://github.com/arpitpandey06" class="btn-primary">Source Code</a>
                                 </div>
