added project images and links

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                         <!-- Project 1: Foodie Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="/assets/image_2.png"
+                                <img src="/assets/project_image/image_2.png"
                                     alt="Foodie_website" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Foodie Food Delivery Website</h3>
-                                <p>A Food Ordering Website Along With Add To Cart And Mobile Responsive Like Features</p>
+                                <p>A Food Ordering Website Along With Add To Cart, Mobile Responsive and More</p>
                                 <div class="project-tech">
                                     <span>HTML</span>
                                     <span>CSS</span>
@@ -161,7 +161,7 @@
                         <!-- Project 2: Second Portfolio Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="/assets/image.png"
+                                <img src="/assets/project_image/image.png"
                                     alt="Portfolio_2" loading="lazy">
                             </div>
                             <div class="project-info">
