--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                         <!-- Project 1: Foodie Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="assets/project_image/image_2.png"
-                                    alt="Foodie_website" loading="lazy">
+                                <img src="assets/project_image/image_2.png" alt="Foodie_website" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Foodie Food Delivery Website</h3>
@@ -161,25 +160,84 @@
                         <!-- Project 2: Second Portfolio Website -->
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="assets/project_image/image.png"
-                                    alt="Portfolio_2" loading="lazy">
+                                <img src="assets/project_image/image.png" alt="Portfolio_2" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Portfoilo Website 2</h3>
-                                <p>An Another Design For A New Portfolio Website Of Mine with Proper Responsiveness And New Looks</p>
+                                <p>An Another Design For A New Portfolio Website Of Mine with Proper Responsiveness And
+                                    New Looks</p>
                                 <div class="project-tech">
                                     <span>HTML</span>
                                     <span>CSS</span>
                                     <span>JavaScript</span>
                                 </div>
                                 <div class="project-links">
-                                    <a href="https://arpitpandey06.github.io/Portfolio_website_02/" class="btn-secondary">View
+                                    <a href="https://arpitpandey06.github.io/Portfolio_website_02/"
+                                        class="btn-secondary">View
                                         Demo</a>
                                     <a href="https://github.com/arpitpandey06" class="btn-primary">Source Code</a>
                                 </div>
                             </div>
                         </div>
                         <!-- Project 3: Weather Forecast -->
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="https://via.placeholder.com/300x200/F5A623/FFFFFF?text=Weather+App"
+                                    alt="Weather Forecast" loading="lazy">
+                            </div>
+                            <div class="project-info">
+                                <h3>Weather Forecast</h3>
+                                <p>Beautiful weather app with 7-day forecast and location-based services.</p>
+                                <div class="project-tech">
+                                    <span>JavaScript</span>
+                                    <span>API</span>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="project-links">
+                                    <a href="#" class="btn-secondary">View Demo</a>
+                                    <a href="#" class="btn-primary">Source Code</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="https://via.placeholder.com/300x200/F5A623/FFFFFF?text=Weather+App"
+                                    alt="Weather Forecast" loading="lazy">
+                            </div>
+                            <div class="project-info">
+                                <h3>Weather Forecast</h3>
+                                <p>Beautiful weather app with 7-day forecast and location-based services.</p>
+                                <div class="project-tech">
+                                    <span>JavaScript</span>
+                                    <span>API</span>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="project-links">
+                                    <a href="#" class="btn-secondary">View Demo</a>
+                                    <a href="#" class="btn-primary">Source Code</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <div class="project-image">
+                                <img src="https://via.placeholder.com/300x200/F5A623/FFFFFF?text=Weather+App"
+                                    alt="Weather Forecast" loading="lazy">
+                            </div>
+                            <div class="project-info">
+                                <h3>Weather Forecast</h3>
+                                <p>Beautiful weather app with 7-day forecast and location-based services.</p>
+                                <div class="project-tech">
+                                    <span>JavaScript</span>
+                                    <span>API</span>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="project-links">
+                                    <a href="#" class="btn-secondary">View Demo</a>
+                                    <a href="#" class="btn-primary">Source Code</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="project-card">
                             <div class="project-image">
                                 <img src="https://via.placeholder.com/300x200/F5A623/FFFFFF?text=Weather+App"
